--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.48.0",
+    "eslint": "8.41.0",
     "eslint-config-next": "13.4.19",
-    "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "mongoose": "6.11.1",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2"
