--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO = mongodb+srv://alex:alex@cluster0.ybxqafr.mongodb.net/?retryWrites=true&w=majority
+MONGO = mongodb+srv://alex:alex@cluster0.ybxqafr.mongodb.net/test?retryWrites=true&w=majority
