--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 MONGO = mongodb+srv://alex:alex@cluster0.ybxqafr.mongodb.net/test?retryWrites=true&w=majority
+
+
+GOOGLE_CLIENT_ID = 106412315015-cfhahllbamsij86b5hace44nvvs407pf.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
+
+
+NEXTAUTH_SECRET="412315015-ybxqafr6QXeHG"
+NEXTAUTH_URL="http://localhost:3000/"
